--- a/final/adopt.html
+++ b/final/adopt.html
@@ -29,7 +29,7 @@
 <body>
     <nav>
         <ul>
-          <li><a href="fromearth.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="pets.html">The Sweeties</a></li>
           <li><a href="contact.html">Contact us</a></li>
           <li><a href="donate.html">Donate</a></li>
