--- a/final/mission.html
+++ b/final/mission.html
@@ -31,7 +31,7 @@
 <header><h1>FromEarth Adoption Agency</h1></header>
 <nav>
   <ul>
-    <li><a href="fromearth.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="pets.html">The Sweeties</a></li>
     <li><a href="contact.html">Contact us</a></li>
     <li><a href="donate.html">Donate</a></li>
