--- a/final/pets.html
+++ b/final/pets.html
@@ -29,7 +29,7 @@
 </head>
 <nav>
     <ul>
-        <li><a href="fromearth.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="mission.html">Mission Statement</a></li>
         <li><a href="contact.html">Contact us</a></li>
         <li><a href="donate.html">Donate</a></li>
