--- a/final/donate.html
+++ b/final/donate.html
@@ -40,7 +40,7 @@
 
 <p>Donation form below:</p>
 
-<form action="http://www.blackgoosebistro.com/pizza.php" method="post">
+<form action="https://uiindustries.github.io/final/final/thank.html" method="post">
 Your Information
     <li>Name:<input type="text" name="customername" id="form-name"></li>
     <li>Address:<input type="text" name="address" id="form-address"></li>
