--- a/final/donate.html
+++ b/final/donate.html
@@ -87,7 +87,7 @@ Your Information
             <option value="6">6</option>
             <option value="7">Yearly</option>
         </select>
-        <input type="submit" value="Take my money!!!">
+        <input type="submit" value="Take my money!!!"> <li><a href="thank.html"></a></li>
  
 </fieldset>
 
