--- a/final/index.html
+++ b/final/index.html
@@ -51,9 +51,9 @@
     <h3>for 40 years...</h3>
     <dl>
       <dt>We have been making room and love for every pet that comes through our doors</dt>
-      <dd>have helped animals recieve vaccinations and needed shots in order to live a happy life</dd>
+      <dd>have helped animals recieve vaccinations and needed shots in order to live a happy life.</dd>
 
-      <dt>plenty of educated veterinarians on staff to asist and help needy animals</dt>
+      <dt>Plenty of educated veterinarians on staff to asist and help needy animals.</dt>
       <dd>Started by Christopher Hunt, we have been dedicated to the lives of animals since our founding.</dd>
     </dl>
   </section>
