--- a/final/pets.html
+++ b/final/pets.html
@@ -44,7 +44,7 @@
 
   <h2>Maya Grace</h2>
   <p><a href="maya.jpg"><img src="maya.jpg" width="300" height="420"></a><br>
-    Maya is a goofy, silly, hyper little ball of fun who loves to love and loves to eat! she's sure to bring your house plenty of love</p>
+    Maya is a goofy, silly, hyper little ball of fun who loves to love and loves to eat! She's sure to bring your house plenty of love</p>
 
   <h2>Nobellium</h2>
   <p><a href="noble.jpg"><img src="noble.jpg" width="300" height="420"></a><br>
@@ -52,11 +52,11 @@
 
   <h2>Baron Gunther Von Chaos</h2>
   <p><a href="bear.jpg"><img src="bear.jpg" width="300" height="420"></a><br>
-  <p>Now bear is a mischevious little fellow who truly just loves attention. very patient and weet and more than anything wants to cuddle and be around someone he can truly feel safe around, but don't worry! he's sure to make sure you feel safe and sound too</p>
+  <p>Now bear is a mischevious little fellow who truly just loves attention. Very patient and sweet and more than anything wants to cuddle and be around someone he can truly feel safe around, but don't worry! he's sure to make sure you feel safe and sound too</p>
 
   <h2>Euphemia</h2>
   <p><a href="lance.jpg"><img src="lance.jpg" width="300" height="420"></a><br>
-    Euphy is a prideful little fellow always concerend about her beauty and her comfort, perfect cat for those who aren't around as much or whom aren't able to dedicate the time other needy pets require, she's sure to be there and happy to see you every day you get home from work though</p>
+    Euphy is a prideful little fellow always concerned about her beauty and her comfort, perfect cat for those who aren't around as much or whom aren't able to dedicate the time other needy pets require, she's sure to be there and happy to see you every day you get home from work though</p>
 
     <footer>
       <div id="about">
