--- a/final/contact.html
+++ b/final/contact.html
@@ -38,7 +38,7 @@
       </nav>
 <h1>FromEarth | Contact us:</h1>
 
-<p>We would love to hear your thoughts and concerns and the best way to do so is to use the contact form below! we have many people in our staff more than willing to help you with your questions, if you prefer to contact us by phone then call (407)-888-8888, leave a short message with your area code and information and we will get back to you promptly. </p>
+<p>We would love to hear your thoughts and concerns and the best way to do so is to use the contact form below! We have many people in our staff more than willing to help you with your questions, if you prefer to contact us by phone then call (407)-888-8888, leave a short message with your area code and information and we will get back to you promptly. </p>
 
 <form action="http://www.blackgoosebistro.com/pizza.php" method="post">
 Your Information
