--- a/final/donate.html
+++ b/final/donate.html
@@ -40,7 +40,6 @@
 
 <p>Donation form below:</p>
 
-<form action="https://uiindustries.github.io/final/final/thank.html" method="post">
 Your Information
     <li>Name:<input type="text" name="customername" id="form-name"></li>
     <li>Address:<input type="text" name="address" id="form-address"></li>
@@ -87,11 +86,10 @@ Your Information
             <option value="6">6</option>
             <option value="7">Yearly</option>
         </select>
-        <input type="submit" value="Take my money!!!">
+        <input type="submit" value="Take my money!!!"> <li><a href="pizza.html"> 
  
 </fieldset>
 
-</form>
 
 <footer>
     <div id="about">
