--- a/final/index.html
+++ b/final/index.html
@@ -47,14 +47,15 @@
   </header>
 <p> We here at From Earth are a group of people who have dedicated their properties to housing unwanted and unloved pets until we can find them a loving home</p>
 
-  <section id="Faculties">
+  <section id="Upcoming">
     <h3>for 40 years...</h3>
     <dl>
       <dt>We have been making room and love for every pet that comes through our doors</dt>
       <dd>have helped animals recieve vaccinations and needed shots in order to live a happy life.</dd>
 
       <dt>Plenty of educated veterinarians on staff to asist and help needy animals.</dt>
-      <dd>Started by Christopher Hunt, we have been dedicated to the lives of animals since our founding.</dd>
+      <dd>For more information on upcoming events we are excited about, visit:</dd>
+     <li><a href="https://www.nationaldaycalendar.com/national-day/national-adopt-a-shelter-pet-day-april-30" method=">Adopt a Shelter Pet Day</a></li>
     </dl>
   </section>
 </article>
