--- a/final/index.html
+++ b/final/index.html
@@ -55,7 +55,7 @@
 
       <dt>Plenty of educated veterinarians on staff to asist and help needy animals.</dt>
       <dd>For more information on upcoming events we are excited about, visit:</dd>
-     <li><a href="https://www.nationaldaycalendar.com/national-day/national-adopt-a-shelter-pet-day-april-30">Adopt a Shelter Pet Day</a></li>
+     <li><a>="https://www.nationaldaycalendar.com/national-day/national-adopt-a-shelter-pet-day-april-30">Adopt a Shelter Pet Day</a></li>
     </dl>
   </section>
 </article>
