--- a/final/donate.html
+++ b/final/donate.html
@@ -86,7 +86,7 @@ Your Information
             <option value="6">6</option>
             <option value="7">Yearly</option>
         </select>
-      <li><a href="thank.html"> <input type="submit" value="Take my money!!!"> 
+      <li><a href="thank.html"><input type="submit" value="Take my money!!!"></a></li>
  
 </fieldset>
 
